//         Changes to the code that do not affect the behavior of the program.
----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Features:
        - Open the preferences or milestones when you click on the icon for the reactor or quality warning messages.
        - Implemented Auto Save.
----------------------------------------------------------------------------------------------------------------------
Version: 2.10.0
Date: March 5th 2025
    Features:
        - (SA) Calculate the required heating and show it in tooltips and the shopping list.
        - Update Yafc to support Factorio 2.0.38
----------------------------------------------------------------------------------------------------------------------
Version: 2.9.0
Date: February 24th 2025
    Features:
        - Add related recipes to the Link Summary screen.
    Fixes:
        - (regression) Legacy summary pages could not be saved or loaded.
        - Quality bonuses/penalties in beacons were not handled correctly.
----------------------------------------------------------------------------------------------------------------------
Version: 2.8.1
Date: February 20th 2025
    Fixes:
        - (regression) Links for recipes with fluid outputs were not handled correctly.
----------------------------------------------------------------------------------------------------------------------
Version: 2.8.0
Date: February 19th 2025
    Features:
        - Detect lightning rods/collectors as electricity sources, and estimate the required accumulator count.
        - Added button to remove link from link summary screen.
        - Support production of quality items from quality inputs and/or quality modules.
    Fixes:
        - When creating launch recipes, obey the rocket capacity, not the item stack size.
        - Improve detection of special (e.g. barrelling, caging) recipes, especially with SA's recycling recipes.