@@ -20,6 +20,7 @@ Date:
     Features:
         - Open the preferences or milestones when you click on the icon for the reactor or quality warning messages.
         - Implemented Auto Save.
+        - (SA) Research recipes correctly consume quality science packs.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.10.0
 Date: March 5th 2025
